src/objects/Volunteer_Shift_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Shift Contacts</relationshipLabel>
        <relationshipName>Volunteer_Shift_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Shift__c</fullName>
        <label>Volunteer Shift</label>
        <referenceTo>GW_Volunteers__Volunteer_Shift__c</referenceTo>
        <relationshipLabel>Volunteer Shift Contacts</relationshipLabel>
        <relationshipName>Volunteer_Shift_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Volunteer Shift Contact</label>
    <nameField>
        <displayFormat>ShiftContact-{00000}</displayFormat>
        <label>ShiftContactId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Shift Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>Contact__c == null</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Contact is required</errorMessage>
    </validationRules>
</CustomObject>